--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
                                         <a href="/teacher">添加教师</a>
                                     </li>
                                     <li class="list-group-item">
-                                        <a href="#">教师查询</a>
+                                        <a href="/search_Teacher">教师查询</a>
                                     </li>                            
                                 </ul>
                             </div>
