--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -17,7 +17,7 @@
 			<h3>这里添加老师信息</h3>
 			<hr>
 			<a class="nav_top" href="/"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-eye-open"></span> 返回主页</button></a>
-			<a class="nav_top" href="#"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-th-list"></span> 查询老师</button></a>
+			<a class="nav_top" href="/search_Teacher"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-th-list"></span> 查询老师</button></a>
             <div class="main-navbar">
                <ul class="nav-pills">
                     <li class="nav"><a href="#"><%= username %></a></li>
